<resources>
    <string name="app_name">coinblesk</string>
    <string name="addresses">Addresses</string>
    <string name="settings">Settings</string>
    <string name="backup">Backup</string>
    <string name="activate_vendor_mode">Activate Vendor Mode</string>
    <string name="about_coinblesk">About Coinblesk</string>
    <string name="share_coinblesk">Share Coinblesk</string>
    <string name="about_build_info_main"><![CDATA[
        <b>Coinblesk 2016</b><br>
        Version %s
    ]]></string>
    <string name="social_about_text">Coinblesk is a student project of the University of Zurich, namely of the
        Communication Systems Group, which is part of the Department of Informatics.\nFor further information please
        visit the official project homepage.\nIf you\'re interested in the source code, please visit github for
        reference and documentation.
    </string>
    <string name="social_about_text_short">Coinblesk is a student project of the University of Zurich, namely of the
        Communication Systems Group, which is part of the Department of Informatics.
    </string>
    <string name="social_about_text_not_clickable">Can\'t click here.</string>
    <string name="social_website">Website\n
        <i>Coinblesk.com</i>
    </string>
    <string name="social_website_content_description">Website\n
        <i>Coinblesk.com</i>
    </string>
    <string name="social_github">Open-Source\n
        <i>Github.com/coinblesk</i>
    </string>
    <string name="social_github_content_description">Github</string>
    <string name="social_about_tos">\nTerms of Use</string>
    <string name="social_about_tos_content_description">Terms of Use</string>
    <string name="social_about_tos_content">
        This application was developed as part of a various student projects at the Department of Informatics
        at the University of Zurich in Switzerland.\nWe do not take any responsibility for a possible loss of your
        Bitcoins
        in case of a system/hardware failure or by unpredictable malicious third-party influence. Please be aware that
        this application is
        still in its Beta Stadium and bugs may occur.
        \nUniversity of Zurich, 2016
    </string>
    <string name="backup_backup">Backup\n
        <i>Create an encrypted local backup</i>
    </string>
    <string name="backup_backup_content_description">Backup your wallet</string>
    <string name="backup_restore">Restore\n
        <i>Restore your wallet from an encrypted wallet file</i>
    </string>
    <string name="backup_restore_content_description">Restore your wallet</string>
    <string name="backup_refresh">Refresh\n
        <i>By refreshing your wallet you re-download all your transactions. You won\'t loose your coins.</i>
    </string>
    <string name="backup_refresh_content_description">Refresh your wallet</string>
    <string name="backup_refresh_dialog_title">Refresh Wallet</string>
    <string name="backup_refresh_dialog_message">If you continue the transaction history and wallet balance will be
        cleared temporarily. Replaying the blockchain may take a while. If you proceed, the app must be restarted.
    </string>
    <string name="fragment_backup_title">Backup Wallet</string>
    <string name="fragment_backup_password_text_hint">Password</string>
    <string name="fragment_backup_password_again_text_hint">Repeat Password</string>
    <string name="fragment_backup_passwordmismatch_text">Passwords do not match</string>
    <string name="fragment_backup_description">Your wallet will be stored in a file on this device in the Download
        folder. The backup is encrypted using your password.
    </string>
    <string name="fragment_backup_failed_title">Wallet Backup Failed</string>
    <string name="fragment_backup_failed_message">The wallet could not be stored on the device</string>
    <string name="fragment_backup_success_title">Wallet Backup</string>
    <string name="fragment_backup_success_message">
        <![CDATA[
            The wallet backup was stored on your device: <pre>%1$s</pre>
            <br /><br />Do you want to send the backup via email?
        ]]>
    </string>
    <string name="backup_mail_subject">Wallet Backup</string>
    <string name="backup_mail_message">Please find attached the Coinblesk wallet backup.</string>
    <string name="backup_mail_chooser">Send wallet backup...</string>
    <string name="fragment_backup_restore_title">Restore Wallet</string>
    <string name="fragment_backup_restore_description">Select the wallet backup file and enter your password. The backup
        file must be in your Download folder.
    </string>
    <string name="backup_restore_warning">Warning: If you proceed, the current wallet will be removed and overwritten.</string>
    <string name="fragment_backup_restore_failed_title">Restore Failed</string>
    <string name="fragment_backup_restore_failed_message">Could not restore backup from file due to error:\n%1$s\n\nDid you use the correct password?</string>
    <string name="backup_storage_permissions_title">Storage Permissions</string>
    <string name="backup_storage_permissions_rationale">Coinblesk requires access to storage in oder to save the wallet backup and load existing backup archives.</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_settings">Settings</string>
    <string name="action_qr_code">QR-Code</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="key_custom_one">customize</string>
    <string name="key_custom_two">customize</string>
    <string name="key_custom_three">customize</string>
    <string name="key_custom_four">customize</string>
    <string name="key_custom_five">customize</string>
    <string name="key_custom_six">customize</string>
    <string name="key_custom_seven">customize</string>
    <string name="key_custom_eight">customize</string>
    <string name="key_seven">7</string>
    <string name="key_eight">8</string>
    <string name="key_nine">9</string>
    <string name="key_clear">CLEAR</string>
    <string name="key_four">4</string>
    <string name="key_five">5</string>
    <string name="key_six">6</string>
    <string name="key_subtotal">SUBTOTAL</string>
    <string name="key_one">1</string>
    <string name="key_two">2</string>
    <string name="key_three">3</string>
    <string name="key_plus">+</string>
    <string name="key_zero">0</string>
    <string name="key_zero_zero">00</string>
    <string name="key_dot">.</string>
    <string name="key_accept">accept</string>
    <string name="qr_code_dialog_title">Your QR Code</string>
    <string name="qr_code_copied">Successfully copied to your Clipboard.</string>
    <string name="qr_code_close">Close</string>
    <string name="qr_code_error_title">QR Code Error</string>
    <string name="qr_code_error_message">Cannot display QR Code:\n%1$s</string>
    <string name="authview_address_title">Address</string>
    <string name="authview_amount_title">Amount</string>
    <string name="authview_authview_title">Your Unique Pattern for Identification</string>
    <string name="authview_dialog_title">Receive Contactless</string>
    <string name="snackbar_receive_contactless">Sending out payment requests</string>
    <string name="pref_general_settings_category_title">General Settings</string>
    <string name="pref_payment_settings_category_title">Payment Settings</string>
    <string name="pref_advanced_settings_category_title">Advanced</string>
    <string name="pref_balance_title">Primary Balance</string>
    <string name="pref_balance_description">Change your balance representation.</string>
    <string name="pref_currency_title">Fiat Currency</string>
    <string name="pref_currency_description">Change your fiat currency.</string>
    <string name="pref_bitcoin_rep_title">Bitcoin Representation</string>
    <string name="pref_bitcoin_rep_description">Change the Bitcoin representation unit.</string>
    <string name="pref_connection_settings_title">Contactless Payment Settings</string>
    <string name="pref_connection_settings_summary">Define contactless payment protocols.</string>
    <string name="pref_connection_nfc_summary">Use NFC for Contactless Payment</string>
    <string name="pref_connection_nfc_title">Activate NFC</string>
    <string name="pref_connection_settings">pref_connection_settings</string>
    <string name="pref_fee_description">Activate transaction fee when receiving a payment</string>
    <string name="pref_fee_title">Transaction Fee</string>
    <string name="pref_fee_amount_default_value">1</string>
    <string name="pref_fee_amount_description">Defined Percentage of the payment will be added as transaction fee.
    </string>
    <string name="pref_fee_amount_title">Fee Amount in Perecentage (%)</string>
    <string name="pref_auto_accept_description">Fee Amount in Perecentage (%)</string>
    <string name="pref_payment_auto_accept_title">Auto-Accept Payment Requests</string>
    <string name="pref_payment_auto_accept_description">Automatically accept payment requests received over NFC up to defined limit.</string>
    <string name="pref_payment_auto_accept_amount_title">Auto-Accept Payment Limit (BTC)</string>
    <string name="pref_payment_auto_accept_amount_description">Auto-accept payments up to this limit in BTC.</string>
    <string name="pref_network_dialog_title">Bitcoin Network</string>
    <string name="pref_network_description">Select the bitcoin network</string>
    <string name="pref_wallet_settings_title">Wallet Settings</string>
    <string name="pref_wallet_locktime_period_title">Locktime Period</string>
    <string name="pref_wallet_locktime_period_summary">Time span after which funds can be redeemed.</string>
    <string name="action_copy">Copy</string>
    <string name="action_open">Open</string>
    <string name="action_broadcast">Broadcast</string>
    <string name="action_wallet_refund">Collect refund</string>
    <string name="action_wallet_create_time_locked_address">Create new address</string>
    <string name="action_wallet_refresh">Refresh</string>
    <string name="additional_services_email">Email</string>
    <string name="additional_services_password">Password</string>
    <string name="additional_services_balance">Balance:</string>
    <string name="additional_services_balance_default">0 BTC</string>
    <string name="additional_services_description_2">Transfer BTC from old coinblesk to current version</string>
    <string name="additional_services_second_password">Confirm password</string>
    <string name="additional_services_show_password">Show password</string>
    <string name="additional_services_forgot_password">Forgot password?</string>
    <string name="bitcoin_representation">Bitcoin representation</string>
    <string name="fiat_currency">Fiat currency</string>
    <string name="pref_exchange_rate_USD">USD</string>
    <string name="pref_exchange_rate_EUR">EUR</string>
    <string name="pref_network_list">pref_network_list</string>
    <string name="pref_network_default_value">@string/pref_network_mainnet</string>
    <string name="pref_bitcoin_rep_BTC">BTC</string>
    <string name="pref_bitcoin_rep_milliBTC">mBTC</string>
    <string name="pref_bitcoin_rep_microBTC">μBTC</string>
    <string name="pref_wallet_locktime_period">pref_wallet_locktime_period</string>
    <string name="pref_wallet_locktime_period_default">3</string>
    <string name="pref_payment_auto_accept_enabled">pref_payment_auto_accept_enabled</string>
    <string name="pref_payment_auto_accept_enabled_default">false</string>
    <string name="pref_payment_auto_accept_amount">pref_payment_auto_accept_amount</string>
</resources>