<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_payment_settings"
        android:title="@string/pref_payment_settings_category_title">

        <CheckBoxPreference
            android:key="@string/pref_payment_auto_accept_enabled"
            android:title="@string/pref_payment_auto_accept_title"
            android:summary="@string/pref_payment_auto_accept_description"
            android:defaultValue="@string/pref_payment_auto_accept_enabled_default" />

        <EditTextPreference
            android:key="@string/pref_payment_auto_accept_amount"
            android:title="@string/pref_payment_auto_accept_amount_title"
            android:summary="@string/pref_payment_auto_accept_amount_description"
            android:numeric="decimal"
            android:maxLength="6"
            android:dependency="@string/pref_payment_auto_accept_enabled" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_wallet_settings"
        android:title="@string/pref_wallet_settings_title">

        <ListPreference
            android:key="@string/pref_wallet_locktime_period"
            android:title="@string/pref_wallet_locktime_period_title"
            android:summary="@string/pref_wallet_locktime_period_summary"
            android:dialogTitle="@string/pref_wallet_locktime_period_title"
            android:entries="@array/pref_wallet_locktime_periods_entries"
            android:entryValues="@array/pref_wallet_locktime_periods_values"
            android:defaultValue="@string/pref_wallet_locktime_period_default" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_payment_advanced_settings"
        android:title="@string/pref_advanced_settings_category_title">

        <ListPreference
            android:key="@string/pref_network_list"
            android:defaultValue="@string/pref_network_default_value"
            android:dialogTitle="@string/pref_network_dialog_title"
            android:entries="@array/pref_network_entries"
            android:entryValues="@array/pref_network_values"
            android:summary="@string/pref_network_description"
            android:title="@string/pref_network_dialog_title" />

    </PreferenceCategory>
</PreferenceScreen>
