<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/verified_users"
            android:checked="false"
            android:title="@string/verified_users" />

        <item
            android:id="@+id/backup"
            android:checked="false"
            android:title="@string/backup" />

        <item
            android:id="@+id/settings"
            android:checked="false"
            android:title="@string/settings" />

        <item
            android:id="@+id/activate_vendor_mode"
            android:checked="false"
            android:title="@string/activate_vendor_mode" />

        <item
            android:id="@+id/about_coinblesk"
            android:checked="false"
            android:title="@string/about_coinblesk" />


    </group>
</menu>