<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
                android:id="@+id/action_tx_copy"
                android:icon="@drawable/ic_content_copy_white_24dp"
                android:title="@string/action_copy"
                app:showAsAction="ifRoom"/>

        <item
                android:id="@+id/action_tx_open_web"
                android:icon="@drawable/ic_open_in_browser_black_24dp"
                android:title="@string/action_open"
                app:showAsAction="ifRoom"/>

        <item
                android:id="@+id/action_tx_broadcast"
                android:title="@string/action_broadcast"
                app:showAsAction="never"/>

</menu>