<?xml version="1.0" encoding="utf-8"?>




    <TableLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/bitcoin_representation"
                android:id="@+id/textView2"
                android:layout_span="3"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:layout_column="0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:showDividers="middle|beginning|end"
            android:padding="5dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textSize="@dimen/text_size_xlarge"
                android:text="@string/pref_bitcoin_rep_BTC"
                android:id="@+id/btc"
                android:layout_column="0"
                android:background="@drawable/cell_shape"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textSize="@dimen/text_size_xlarge"
                android:text="@string/pref_bitcoin_rep_milliBTC"
                android:id="@+id/mbtc"
                android:layout_column="1"
                android:background="@drawable/cell_shape"
                android:gravity="center_horizontal"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textSize="@dimen/text_size_xlarge"
                android:text="@string/pref_bitcoin_rep_microBTC"
                android:id="@+id/ubtc"
                android:layout_column="2"
                android:background="@drawable/cell_shape"
                android:gravity="center_horizontal"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_weight="1" />


        </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/fiat_currency"
            android:id="@+id/textView3"
            android:layout_span="3"
            android:padding="5dp"
            android:layout_column="0"
            android:layout_margin="5dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_xlarge"
            android:text="@string/pref_exchange_rate_USD"
            android:id="@+id/usd"
            android:layout_column="0"
            android:background="@drawable/cell_shape"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textSize="@dimen/text_size_xlarge"
            android:text="@string/pref_exchange_rate_EUR"
            android:id="@+id/eur"
            android:layout_column="1"
            android:background="@drawable/cell_shape"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:layout_weight="1" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_size_xlarge"
            android:id="@+id/currency_spinner"
            android:layout_column="2"
            android:background="@drawable/cell_shape"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:layout_weight="1" />

    </TableRow>

</TableLayout>

