<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              style="@style/qr_dialog_fragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/fragment_backup_restore_description"
                android:id="@+id/textView" android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"/>

        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:id="@+id/fragment_restore_file_spinner"
                android:layout_marginBottom="10dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/backup_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_micro">

            <EditText
                    android:id="@+id/backup_password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_backup_password_text_hint"
                    android:inputType="textPassword"
                    android:textSize="@dimen/text_size_large"
                    android:theme="@style/EditTextTheme"
                    android:password="true" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/backup_restore_warning"
            android:id="@+id/backup_restore_warning"
            android:layout_marginTop="@dimen/card_margin" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fragment_backup_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/fragment_backup_ok"
            android:padding="@dimen/spacing_normal"
            android:text="@string/cancel" />

        <Button
                android:id="@+id/fragment_backup_ok"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:padding="@dimen/spacing_normal"
                android:text="@string/ok" />

    </RelativeLayout>

</LinearLayout>