<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/card_margin"
    tools:context=".additionalservices.AdditionalServicesUsernameDialog">

    <!-- Username / Email -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_micro">

        <EditText
            android:id="@+id/additional_services_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/additional_services_email"
            android:inputType="textEmailAddress|textNoSuggestions|text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </android.support.design.widget.TextInputLayout>


    <!-- Password -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_micro">

        <EditText
            android:id="@+id/additional_services_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/additional_services_password"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <CheckBox
                android:id="@+id/additional_services_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:singleLine="true"
                android:text="@string/additional_services_forgot_password" />

            <CheckBox
                android:id="@+id/additional_services_checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:singleLine="true"
                android:text="@string/additional_services_show_password" />
        </LinearLayout>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/additional_services_second_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_micro"
        android:visibility="gone">

        <EditText
            android:id="@+id/additional_services_second_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/additional_services_second_password"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <CheckBox
            android:id="@+id/additional_services_checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:checked="false"
            android:text="@string/additional_services_show_password" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>


